# console_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yaml  pyproject.toml
rest-client/: api-requests.http  auth.http  login.http  permission.http  role.http  user.http
sql/: create_permissions.sql  init.sql
src/console_server/: auth.py  env.py  main.py  models.py  permissions.py  schemas.py
src/console_server/api/: auth.py  router.py
src/console_server/api/v1/: router.py
src/console_server/api/v1/endpoints/: permission.py  role.py  self.py  user.py
src/console_server/core/: config.py  constants.py
src/console_server/db/: database.py  init_db.py
src/console_server/middleware/: auth.py
src/console_server/model/: rbac.py  token.py
src/console_server/rbac/: deps.py  enforcer.py  model.conf  policy.csv
src/console_server/schema/: common.py  permission.py  role.py  user.py
src/console_server/utils/: auth.py  console.py  get_version.py
